template generation in the works.

--- a/lib/fxruby-enhancement/api-mapper.rb.erb
+++ b/lib/fxruby-enhancement/api-mapper.rb.erb
@@ -7,6 +7,13 @@ file instead!!!!
 
 <% for @class, @details in @api %>
    <%= @class %> < <%= @details[:class][1] %>
+   <% unless @details[:initialize].nil? %>
+      <% for @iniparams in @details[:initialize] %>
+         <%= @iniparams %>   
+      <% end %>
+   <% else %>
+      No initializer
+   <% end %>
 <% end %>
 
 module Fox
