of deep thoughts and explodie brains

--- a/lib/fxruby-enhancement/api-mapper.rb.erb
+++ b/lib/fxruby-enhancement/api-mapper.rb.erb
@@ -60,6 +60,11 @@ module Fox
 <% for @class, @details in @api %>
    class <%= @class %>
      include Enhancement
+     attr_accessor :_o     
+   end
+   def <%= @class.snake %> name = nil, &block
+     o = OStruct.new
+
    end
 <% end %>
-end
+end 
