adding stuff to the Mapper and the like for syntatic sugar delegations et al

--- a/lib/fxruby-enhancement/api-mapper.rb.erb
+++ b/lib/fxruby-enhancement/api-mapper.rb.erb
@@ -19,6 +19,7 @@ module Fox
     <% for @class, @details in @api %>
        def <%= @class.snake %> name = nil, ii: 0, pos: Enhancement.stack.last, &block
          Enhancement.stack << (@os = os = OpenStruct.new(klass: <%= @class %>, op: [], ii: ii, fx: nil, kinder: [], inst: nil, instance_result: nil))
+         Enhancement.components[name] = os unless name.nil?
          unless pos.nil?
            pos.kinder << os 
          else
