--- a/lib/fxruby-enhancement/api-mapper.rb.erb
+++ b/lib/fxruby-enhancement/api-mapper.rb.erb
@@ -17,7 +17,7 @@ module Fox
   module Enhancement
     module Mapper
     <% for @class, @details in @api %>
-       def <%= @class.snake %> name = nil, ii: 0, pos: Enhancement.stack.last, &block
+       def <%= @class.snake %> name = nil, ii: <%= (Fox::Enhancement::INITFORCE.member? @class) ? Fox::Enhancement::INITFORCE[@class] : 0 %>, pos: Enhancement.stack.last, &block
          Enhancement.stack << (@os = os = OpenStruct.new(klass: <%= @class %>, op: [], ii: ii, fx: nil, kinder: [], inst: nil, instance_result: nil))
          Enhancement.components[name] = os unless name.nil?
          unless pos.nil?
