--- a/lib/fxruby-enhancement/api-mapper.rb.erb
+++ b/lib/fxruby-enhancement/api-mapper.rb.erb
@@ -55,7 +55,7 @@ module Fox
          Enhancement.components[name] = os unless name.nil?
          unless pos.nil?
            pos.kinder << os 
-         els
+         else
            Enhancement.base = os
          end
          <% @i=0 %>
